--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "node-sass": "^8.0.0",
+    "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
